--- a/contacts/www/pages/contacts.html
+++ b/contacts/www/pages/contacts.html
@@ -12,8 +12,10 @@
     <body>
 
         <header class="bar bar-nav">
-          <a class="icon icon-refresh pull-right"></a>
-          <h1 class="title">Dashboard</h1>
+          <a class="navigate-right" href="two.html" data-transition="slide-in">
+            <img class="media-object pull-left" src="images/img1.jpeg">
+              Dashboard
+          </a>
         </header>
 
         <div class="bar bar-footer">
